Polish rental marketplace UI and ingestion admin